Modernize homepage sections: FAQ and Categories Grid

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
 # Site
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# ISR (Incremental Static Regeneration)
+REVALIDATION_TOKEN=your-secret-token-for-on-demand-revalidation
