--- a/package.json
+++ b/package.json
@@ -5,22 +5,40 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lighthouse": "node scripts/lighthouse.js",
+    "lighthouse:mobile": "node scripts/lighthouse.js --mobile",
+    "lighthouse:all": "npm run lighthouse && npm run lighthouse:mobile"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.49.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "canvas": "^3.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.23",
+    "lucide-react": "^0.477.0",
     "next": "14.2.23",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
+    "schema-dts": "^1.1.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "web-vitals": "^4.2.4"
   }
 }
