--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "lighthouse": "node scripts/lighthouse.js",
     "lighthouse:mobile": "node scripts/lighthouse.js --mobile",
     "lighthouse:all": "npm run lighthouse && npm run lighthouse:mobile",
-    "db:push": "supabase db push",
-    "db:diff": "supabase db diff -f",
-    "db:reset": "supabase db reset",
-    "db:new-migration": "supabase migration new",
-    "db:create-migration": "node scripts/create-migration.js",
-    "db:check-status": "node scripts/check-supabase-status.js"
+    "db:push": "dotenv -e .env.local -- supabase db push",
+    "db:diff": "dotenv -e .env.local -- supabase db diff -f",
+    "db:reset": "dotenv -e .env.local -- supabase db reset",
+    "db:new-migration": "dotenv -e .env.local -- supabase migration new",
+    "db:create-migration": "dotenv -e .env.local -- node scripts/create-migration.js",
+    "db:check-status": "dotenv -e .env.local -- node scripts/check-supabase-status.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.3",
@@ -26,6 +26,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -33,8 +34,10 @@
     "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.23",
+    "formidable": "^3.5.2",
     "lucide-react": "^0.477.0",
     "next": "14.2.23",
     "next-sitemap": "^4.2.3",
@@ -48,6 +51,7 @@
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
+    "dotenv-cli": "^8.0.0",
     "supabase": "^2.15.8"
   }
 }
