Add Auth0 integration with Supabase

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,32 @@
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=https://your-project-url.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+# Supabase configuratie
+NEXT_PUBLIC_SUPABASE_URL=https://your-supabase-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
-# Site
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
+# Auth0 configuratie
+# Een lange geheime waarde gebruikt om de sessie cookie te versleutelen
+# Genereer met: openssl rand -hex 32
+AUTH0_SECRET=your-auth0-secret-at-least-32-characters-long
 
-# ISR (Incremental Static Regeneration)
-REVALIDATION_TOKEN=your-secret-token-for-on-demand-revalidation
+# De basis URL van je applicatie
+AUTH0_BASE_URL=http://localhost:3000
+
+# De URL van je Auth0 tenant domein
+AUTH0_ISSUER_BASE_URL=https://dev-gzb72t2cc4adjf8f.eu.auth0.com
+
+# Je Auth0 applicatie Client ID
+AUTH0_CLIENT_ID=your-auth0-client-id
+
+# Je Auth0 applicatie Client Secret
+AUTH0_CLIENT_SECRET=your-auth0-client-secret
+
+# Optioneel: Je Auth0 API identifier
+# AUTH0_AUDIENCE=your-auth0-api-identifier
+
+# Optioneel: De rechten die je app vraagt
+# AUTH0_SCOPE=openid profile email
+
+# Optioneel: Auth0 Management API configuratie voor scripts
+# AUTH0_MANAGEMENT_CLIENT_ID=your-auth0-management-client-id
+# AUTH0_MANAGEMENT_CLIENT_SECRET=your-auth0-management-client-secret
+# AUTH0_MANAGEMENT_AUDIENCE=https://dev-gzb72t2cc4adjf8f.eu.auth0.com/api/v2/
